--- a/thegame/style.css
+++ b/thegame/style.css
@@ -182,33 +182,33 @@ button[type="reset"] {
     width: 32rem;
     height: 32rem;
     padding: auto;
+
     
 }
 .row {
+    margin-top: 3%;
     width: 100%;
-    height: 33.33%;
+    height: 30%;
     display: flex;
     justify-content: space-between;
 }
 .spot {
-    width: 33.33%;
+    padding-bottom: 1rem;
+    border-radius: 2rem;
+    background-color: var(--2C);
+    width: 30%;
     height: 100%;
-    border: 4px solid var(--2C);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 8rem;
 }
-.is-x {
-    color: blue;
-    background: blue;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 @media only screen and (max-width: 627px){
     .contner {
-        width: 100vw;
-        height: 100vw;
+        width: calc(100vw - 1rem);
+        height:  calc(100vw - 1rem);
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
     main {
         height: 60vh;
